--- a/android_foodwatcher/gradle/wrapper/gradle-wrapper.properties
+++ b/android_foodwatcher/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Tue Sep 17 20:03:25 CEST 2019
+#Mon Sep 23 15:09:33 EDT 2019
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
