ajout d'un bouton permettant d'acceder a la vue d'ajout des produits

--- a/android_foodwatcher/app/src/main/AndroidManifest.xml
+++ b/android_foodwatcher/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         </activity>
         <activity android:name=".view.SampleActivity" />
         <activity android:name=".view.AddHomeActivity" />
+        <activity android:name=".view.AddProductActivity" />
         <activity android:name=".view.FindStoreActivity" />
     </application>
 
