Ajout des fichiers pour la capture de photo dans l'ajout de produit, non implémenté

--- a/android_foodwatcher/app/src/main/AndroidManifest.xml
+++ b/android_foodwatcher/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <activity android:name=".view.AddHomeActivity" />
         <activity android:name=".view.AddProductActivity" />
         <activity android:name=".view.FindStoreActivity" />
+        <activity android:name=".view.CameraCapture" />
     </application>
 
 
