--- a/android_foodwatcher/app/src/main/AndroidManifest.xml
+++ b/android_foodwatcher/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".view.SampleActivity" />
-        <activity android:name=".view.AddHomeActivity" />
+        <activity android:name=".view.AjouterMaison" />
         <activity android:name=".view.AddProductActivity" />
         <activity android:name=".view.FindStoreActivity" />
         <activity android:name=".view.CameraCapture" />
