--- a/android_foodwatcher/app/src/main/AndroidManifest.xml
+++ b/android_foodwatcher/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".vue.ListeDeCourse"></activity>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -35,7 +36,5 @@
         <activity android:name=".vue.TrouverMagasin" />
         <activity android:name=".vue.PrisePhoto" />
     </application>
-
-
 
 </manifest>
