--- a/android_foodwatcher/app/build.gradle
+++ b/android_foodwatcher/app/build.gradle
@@ -41,4 +41,6 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.1.0'
     implementation 'androidx.navigation:navigation-ui:2.1.0'
 
+    implementation 'info.androidhive:barcode-reader:1.1.5'
+
 }
