--- a/android_foodwatcher/app/src/main/AndroidManifest.xml
+++ b/android_foodwatcher/app/src/main/AndroidManifest.xml
@@ -34,6 +34,9 @@
         <activity android:name=".vue.ActiviteAjouterStock" />
         <activity android:name=".vue.ActiviteAjouterProduit" />
         <activity android:name=".vue.ActiviteTrouverMagasin" />
+        <activity android:name=".vue.ActiviteScanVue"
+            android:theme="@style/ScanTheme"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
