--- a/android_foodwatcher/app/build.gradle
+++ b/android_foodwatcher/app/build.gradle
@@ -42,5 +42,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.1.0'
 
     implementation 'info.androidhive:barcode-reader:1.1.5'
+    debugImplementation 'com.idescout.sql:sqlscout-server:4.1'
+    releaseImplementation 'com.idescout.sql:sqlscout-server-noop:4.1'
 
 }
