Intégration du scanner fait, faire les todo associés

--- a/android_foodwatcher/app/src/main/AndroidManifest.xml
+++ b/android_foodwatcher/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         <activity android:name=".vue.ActiviteAjouterProduit" />
         <activity android:name=".vue.ActiviteTrouverMagasin" />
         <activity android:name=".vue.ActiviteScan"
+            android:theme="@style/ScanTheme"
             android:screenOrientation="portrait"/>
     </application>
 
